app/styles/game.scss
/* ... */
#game table tr td.blackTurf div {
  background-color: rgba(0, 0, 0, 0.4) !important;
  -webkit-box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
  box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
}
#game table tr td.whiteTurf div {
  background-color: rgba(255, 255, 255, 0.4) !important;
  -webkit-box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
  box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
}
#game table tr td.Black div {
  background-color: black !important;
  -webkit-box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
  box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
}
#game table tr td.White div {
  background-color: white !important;
  -webkit-box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
  box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
}
#game table tr td.lastPiecePlayed div:hover span {
  color: transparent !important;
}
#game table tr td.blackTurf div:hover span {
  color: white !important;
}
.currentPlayerBlack #game table tr td.Black div:hover span,
.currentPlayerBlack #game table tr td.blackTurf div:hover span,
.currentPlayerWhite #game table tr td.Black div:hover span,
.currentPlayerWhite #game table tr td.blackTurf div:hover span {
  color: white;
}
#game table tr td.whiteTurf div:hover span {
  color: black !important;
}
.currentPlayerBlack #game table tr td.White div:hover span,
.currentPlayerBlack #game table tr td.whiteTurf div:hover span,
.currentPlayerWhite #game table tr td.White div:hover span,
.currentPlayerWhite #game table tr td.whiteTurf div:hover span {
  color: black;
}
#game table tr td.lastPiecePlayed div:before {
  content: "";
  display: block;
  width: 20px !important;
  height: 20px !important;
  top: 10px;
  left: 10px;
}
#game table tr td.White.lastPiecePlayed div:before {
  border-color: black !important;
  background-color: white !important;
  border: 1px solid black !important;
  -webkit-box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
  box-shadow: 0 0px 2px 0px rgba(0, 0, 0, .7);
}
#game table tr td.Black.lastPiecePlayed div:before {
  border-color: white !important;
  background-color: black !important;
  border: 1px solid white !important;
  -webkit-box-shadow: 0 0px 2px 0px rgba(255, 255, 255, .7);
  box-shadow: 0 0px 2px 0px rgba(255, 255, 255, .7);
}
#game table tr td div span {
  color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  top: 10px;
  letter-spacing: 1px;
  font-weight: 500;
}
.currentPlayerWhite #game table tr td div:hover {
  background-color: rgba(255, 255, 255, .5);
  cursor: pointer;
  span {
    color: black;
  }
}
.currentPlayerBlack #game table tr td div:hover {
  background-color: rgba(0, 0, 0, .5);
  cursor: pointer;
  span {
    color: white;
  }
}
/* right, bottom > column of numbers */

#game table tr td:nth-last-child(1),
#game table tr:nth-last-child(1) td {
  border: 0px;
}
/* left, right, bottom, top > columns and rows */

#game table tr td:nth-child(1),
#game table tr td:nth-last-child(1),
#game table tr:nth-last-child(1) td,
#game table tr:nth-child(1) td {
  position: relative;
}
/* left > column of numbers */

#game table tr td:nth-child(1):before {
  top: -13px;
  left: -37px;
}
/* right > column of numbers */

#game table tr td:nth-last-child(1):before {
  left: 25px;
  top: -13px;
}
/* bottom > row of letters */

#game table tr:nth-last-child(1) td:after {
  left: -5px;
  top: 18px;
}
/* top > row of letters */

#game table tr:nth-child(1) td:after {
  top: -45px;
  left: -5px;
}
/* left, right, bottom, top > columns and rows */

#game table tr td:nth-child(1):before,
#game table tr td:nth-last-child(1):before,
#game table tr:nth-last-child(1) td:after,
#game table tr:nth-child(1) td:after {
  position: absolute;
  color: brown;
  z-index: 10;
  font-size: 16px;
  font-weight: bold;
  text-align: right;
}
/* left, right > column of numbers */

#game table tr:nth-last-child(1) td:nth-child(1):before,
#game table tr:nth-last-child(1) td:nth-last-child(1):before {
  content: "1";
}
#game table tr:nth-last-child(2) td:nth-child(1):before,
#game table tr:nth-last-child(2) td:nth-last-child(1):before {
  content: "2";
}
#game table tr:nth-last-child(3) td:nth-child(1):before,
#game table tr:nth-last-child(3) td:nth-last-child(1):before {
  content: "3";
}
#game table tr:nth-last-child(4) td:nth-child(1):before,
#game table tr:nth-last-child(4) td:nth-last-child(1):before {
  content: "4";
}
#game table tr:nth-last-child(5) td:nth-child(1):before,
#game table tr:nth-last-child(5) td:nth-last-child(1):before {
  content: "5";
}
#game table tr:nth-last-child(6) td:nth-child(1):before,
#game table tr:nth-last-child(6) td:nth-last-child(1):before {
  content: "6";
}
#game table tr:nth-last-child(7) td:nth-child(1):before,
#game table tr:nth-last-child(7) td:nth-last-child(1):before {
  content: "7";
}
#game table tr:nth-last-child(8) td:nth-child(1):before,
#game table tr:nth-last-child(8) td:nth-last-child(1):before {
  content: "8";
}
#game table tr:nth-last-child(9) td:nth-child(1):before,
#game table tr:nth-last-child(9) td:nth-last-child(1):before {
  content: "9";
}
#game table tr:nth-last-child(10) td:nth-child(1):before,
#game table tr:nth-last-child(10) td:nth-last-child(1):before {
  content: "10";
}
#game table tr:nth-last-child(11) td:nth-child(1):before,
#game table tr:nth-last-child(11) td:nth-last-child(1):before {
  content: "11";
}
#game table tr:nth-last-child(12) td:nth-child(1):before,
#game table tr:nth-last-child(12) td:nth-last-child(1):before {
  content: "12";
}
#game table tr:nth-last-child(13) td:nth-child(1):before,
#game table tr:nth-last-child(13) td:nth-last-child(1):before {
  content: "13";
}
#game table tr:nth-last-child(14) td:nth-child(1):before,
#game table tr:nth-last-child(14) td:nth-last-child(1):before {
  content: "14";
}
/* ... */

